--- a/characterKENTA.html
+++ b/characterKENTA.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <section>
-            <img src="C:\Users\Пользователь\OneDrive\Рабочий стол\tenebriswiki\images\kentaref.jpg" alt="Референс персонажа" class="character-image">
+            <img src="images\kentaref.jpg" alt="Референс персонажа" class="character-image">
             <h2>Внешность</h2>
             <p class ="character-text">лох красивый</p>
             <h2>Биография</h2>
