--- a/characterSOFIA.html
+++ b/characterSOFIA.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <section>
-            <img src="C:\Users\Пользователь\OneDrive\Рабочий стол\tenebriswiki\images\SOFIAREF.png" alt="Референс персонажа" class="character-image">
+            <img src="images\SOFIAREF.png" alt="Референс персонажа" class="character-image">
             <h2>Внешность</h2>
             <p class ="character-text">лошара красивая</p>
             <h2>Биография</h2>
