--- a/restaurant.html
+++ b/restaurant.html
@@ -23,7 +23,7 @@
             <h2>CHARACTERS</h2>
             <ul class="character-list">
                 <li>
-                    <img src="C:\Users\Пользователь\OneDrive\Рабочий стол\tenebriswiki\images\photo_2023-12-01_22-15-21.jpg" class="character-icon">
+                    <img src="images\photo_2023-12-01_22-15-21.jpg" class="character-icon">
                     <a href="characterKENTA.html">Кента</a>
                 </li>
             </ul>
