--- a/police.html
+++ b/police.html
@@ -23,7 +23,7 @@
             <h2>CHARACTERS</h2>
             <ul class="character-list">
                 <li>
-                    <img src="C:\Users\Пользователь\OneDrive\Рабочий стол\tenebriswiki\images\SOFIAICON.jpg" class="character-icon">
+                    <img src="images\SOFIAICON.jpg" class="character-icon">
                     <a href="characterSOFIA.html">София</a>
                 </li>
             </ul>
